--- a/08 if.md
+++ b/08 if.md
@@ -2,7 +2,7 @@
 ## Opdracht
 
 
-- Download de volgende directory `08_if`
+- ga naar `08_if` in `cs1_opdrachten_md_files`
 - in elke folder staat een `.sln` file
     - open de eerste
 - maak nu de opdracht
